tests/invalid/nested_extern_proc.fl
main :: proc () {
  nested :: proc extern ();
  nested();
}
